solved some alignment problems

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -186,7 +186,7 @@ li {
   height: 100%;
 
   & .image_Container {
-    width: 65rem;
+    width: 55rem;
 
     & img {
       width: 100%;
